adicionando iframe home no index

--- a/html e css Modulo 4/Desafio13/pacote-d013/home.html
+++ b/html e css Modulo 4/Desafio13/pacote-d013/home.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Redes Sociais</title>
 </head>
+<style>
+    *{
+        margin: 0;
+        padding: 0;
+    }
+    body{
+        width: 100vw;
+        height: 100vh;
+        background: black url(pacote-d013/imagens/tela-home.jpg) no-repeat top center;
+    }
+</style>
 <body>
-    <main>
-        <section id="telefone">
-
-        </section>
-        <section id="redes-sociais">
-
-        </section>
-    </main>
+   
 </body>
 </html>
