exercicio 2 de formulario e arquivo fake de java

--- a/html e css Modulo 4/ex005/form001.html
+++ b/html e css Modulo 4/ex005/form001.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Meu primeiro formulario</h1>
-    <form action="cadastro.php" autocomplete="on">
+    <form action="cadastro.java" method="post" autocomplete="on">
         <p>
             <label for="inome">Nome:</label>
              <input type="text" name="nome" id="inome">
