--- a/html e css Modulo 4/ex006/tela de login/index.html
+++ b/html e css Modulo 4/ex006/tela de login/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/mediaqueries.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=person" />
+    
     <title>Login</title>
 </head>
 <body>
@@ -16,8 +18,26 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja Bem-Vindo(a). Faça login para acessar sua conta e poder fazer suas configurações noo seu ambiente.</p>
-                <form action="login.java" method="post">
+                <form action="login.java" method="post" autocomplete="on">
+                    <div class="campo">
+                        <i class="material-symbols-outlined">
+                            person
+                        </i>
+                        <input type="email" name="email" id="iemail" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
+                        <label for="ilogin">Login</label>
+                    </div>
 
+                    <div class="campo">
+                        <i class="material-symbols-outlined">
+                            person
+                        </i>
+                        <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html">
+                        Esqueci a senha 
+                    </a>
                 </form>
             </div>
         </section>
