--- a/html e css Modulo 4/ex006/tela de login/index.html
+++ b/html e css Modulo 4/ex006/tela de login/index.html
@@ -20,22 +20,22 @@
                 <p>Seja Bem-Vindo(a). Faça login para acessar sua conta e poder fazer suas configurações noo seu ambiente.</p>
                 <form action="login.java" method="post" autocomplete="on">
                     <div class="campo">
-                        <i class="material-symbols-outlined">
+                        <span class="material-symbols-outlined">
                             person
-                        </i>
+                        </span>
                         <input type="email" name="email" id="iemail" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
                         <label for="ilogin">Login</label>
                     </div>
 
                     <div class="campo">
-                        <i class="material-symbols-outlined">
+                        <span class="material-symbols-outlined">
                             person
-                        </i>
+                        </span>
                         <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">
+                    <a href="esqueci.html" class="senha">
                         Esqueci a senha 
                     </a>
                 </form>
